[gd_scene load_steps=10 format=2]

[ext_resource path="res://planets/planet.gd" type="Script" id=1]
[ext_resource path="res://assets/planets/planet_enter.png" type="Texture" id=2]
[ext_resource path="res://assets/planets/planet01.png" type="Texture" id=3]
[ext_resource path="res://assets/planets/planet02.png" type="Texture" id=4]
[ext_resource path="res://assets/planets/planet03.png" type="Texture" id=5]
[ext_resource path="res://assets/planets/planet04.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 77.0329

[sub_resource type="Animation" id=3]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ]
}

[node name="Planet" type="Area2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -0.902496 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Animation"
anims/Animation = SubResource( 3 )
[connection signal="area_entered" from="." to="." method="_on_Planet_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Planet_area_exited"]
